--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,3 +13,7 @@
 .refreshButton {
   @apply flex items-center gap-1 px-3 py-1 rounded-md hover:bg-neutral-300 dark:hover:bg-neutral-600 active:bg-neutral-300/70 dark:active:bg-neutral-600/60 duration-200 text-xs bg-neutral-200 dark:bg-neutral-700/70;
 }
+
+.searchOpener {
+  @apply dark:bg-neutral-700/50 px-2 py-2 rounded-full w-2 h-2 text-xs border dark:border-neutral-600/50 dark:hover:bg-neutral-700/100 dark:active:bg-neutral-700/60 cursor-pointer duration-200 bg-neutral-200/50 hover:bg-neutral-200/80 flex items-center justify-center;
+}
