--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,7 @@
 }
 
 .refreshButton {
-  @apply flex items-center gap-1 px-3 py-1 rounded-md hover:bg-neutral-300 dark:hover:bg-neutral-600 active:bg-neutral-300/70 dark:active:bg-neutral-600/60 duration-200 text-xs bg-neutral-200 dark:bg-neutral-700/70;
+  @apply flex items-center gap-1 px-3 py-1 rounded-md md:hover:bg-neutral-300 md:dark:hover:bg-neutral-600 active:bg-neutral-300/70 dark:active:bg-neutral-600/60 duration-200 text-xs bg-neutral-200 dark:bg-neutral-700/70;
 }
 
 .searchOpener {
